@@ -24,6 +24,8 @@ cgrates (0.10.1~dev) UNRELEASED; urgency=medium
   * [AgentRequest] Improved NavigableMap
   * [AgentRequest] FieldAsInterface return Data instead of NMItem
   * [SupplierS] Allow multiple suppliers with the same ID
+  * [Engine] Skip caching is limit is 0
+  * [CacheS] Avoid long recaching
 
  -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 15:22:59 +0200
 
